@@ -6,9 +6,17 @@ picker-item-zapper=Zap Items
 picker-item-zapper-all=Zap All Items
 picker-trash-cheat=Clean all trash in cheat mode
 picker-trash-planners=Clean planners in inventory
+picker-no-inv-blueprint=Clean empty BPs from inventory
+picker-no-inv-blueprint-book=Clean empty BP books from inventory
+picker-no-inv-deconstruction-item=Clean empty decon from inventory
+picker-no-inv-upgrade-item=Clean empty upgrade planners
 
 [mod-setting-description]
 picker-item-zapper=Space seperated list of item names that will be zapped into the nether when dropping them with __CONTROL__drop-cursor__ key.
 picker-item-zapper-all=Zaps any item dropped on the ground with __CONTROL__picker-zapper__ key.\nWARNING: This will zap full item stacks. When false just zaps planners
 picker-trash-cheat=Remove all trashed items when in cheat mode.
 picker-trash-planners=Remove all planners from trash inventory.
+picker-no-inv-blueprint=Removes any empty blueprint that finds its way into your inventory.
+picker-no-inv-blueprint-books=Removes any empty blueprint book that finds its way into your inventory.
+picker-no-inv-deconstruction-item=Removes any empty deconstruction planner that finds its way into your inventory.
+picker-no-inv-upgrade-item=Removes empty upgrade items from the inventory.
